logs/python-audiodb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/audiodb'...
Listing './lib/python3.5/site-packages/audiodb/core'...
Compiling './lib/python3.5/site-packages/audiodb/core/db.py'...
***   File "./lib/python3.5/site-packages/audiodb/core/db.py", line 146
    print "File '%s' has been modified" % path.getPath()
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/audiodb/core/file.py'...
***   File "./lib/python3.5/site-packages/audiodb/core/file.py", line 96
    print "Looking up fingerprint"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/audiodb/model'...
Compiling './lib/python3.5/site-packages/audiodb/model/timeline.py'...
***   File "./lib/python3.5/site-packages/audiodb/model/timeline.py", line 47
    print event_start,s_dur,event_start+td
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_audiodb-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
